--- a/Aero.Angular/src/app/app.component.html
+++ b/Aero.Angular/src/app/app.component.html
@@ -1,25 +1,30 @@
-<div class="relative min-h-screen flex flex-col items-center justify-center
-            bg-white dark:bg-slate-900 text-slate-900 dark:text-white
-            transition-colors duration-300"
-     [class.dark]="isDarkMode">
-
+<div
+[class.dark]="isDarkMode">
+<div   class="relative min-h-screen flex flex-col items-center justify-center
+bg-white dark:bg-slate-900 text-slate-900 dark:text-white
+transition-colors duration-300">
   <h1 class="text-6xl font-bold">Aero</h1>
 
   <div class="absolute top-4 right-4">
     <div class="relative">
-      <button class="w-10 h-10 flex items-center justify-center
-                     rounded-full bg-gray-200 text-gray-700
-                     dark:bg-gray-700 dark:text-gray-200
-                     hover:opacity-80 transition-opacity"
-              (click)="toggleSettingsMenu()">
+      <button
+        #avatarButtonRef
+        class="w-10 h-10 flex items-center justify-center
+               rounded-full bg-primary text-gray-200 dark:text-gray-200
+               hover:opacity-80 transition-opacity"
+        (click)="toggleSettingsMenu()"
+      >
         MM
       </button>
 
-      <div *ngIf="showSettingsMenu"
-           class="absolute right-0 top-full mt-2 p-4 w-40
-                  bg-white dark:bg-gray-800
-                  border border-gray-300 dark:border-gray-600
-                  rounded shadow-md">
+      <div
+        *ngIf="showSettingsMenu"
+        #settingsMenuRef
+        class="absolute right-0 top-full mt-2 p-4 w-40
+               bg-white dark:bg-gray-800
+               border border-gray-300 dark:border-gray-600
+               rounded shadow-md"
+      >
         <div class="flex items-center space-x-2">
           <input
             type="checkbox"
@@ -28,13 +33,12 @@
             class="cursor-pointer"
           />
           <label class="cursor-pointer select-none">
-            Dark Mode
+            Dark
           </label>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
+</div>
 
