--- a/Aero.Angular/src/app/workers/workers.component.html
+++ b/Aero.Angular/src/app/workers/workers.component.html
@@ -61,12 +61,12 @@
 
                   <div class="w-2/3">
                     @switch (arg.type) {
-                      @case ('string') {
+                      @case ('text') {
                         <input
                           [id]="arg.name"
                           type="text"
                           [formControlName]="arg.name"
-                          class="w-full p-2 rounded border border-primary focus:outline-none focus:border-accent"
+                          class="w-full p-2 rounded border border-primary focus:outline-none focus:border-accent text-black"
                           [placeholder]="arg.defaultValue || ''">
                       }
                       @case ('number') {
@@ -74,7 +74,7 @@
                           [id]="arg.name"
                           type="number"
                           [formControlName]="arg.name"
-                          class="w-full p-2 rounded border border-primary focus:outline-none focus:border-accent"
+                          class="w-full p-2 rounded border border-primary focus:outline-none focus:border-accent text-black"
                           [placeholder]="arg.defaultValue || ''">
                       }
                       @case ('date') {
@@ -82,7 +82,7 @@
                           [id]="arg.name"
                           type="date"
                           [formControlName]="arg.name"
-                          class="w-full p-2 rounded border border-primary focus:outline-none focus:border-accent">
+                          class="w-full p-2 rounded border border-primary focus:outline-none focus:border-accent text-black">
                       }
                       @case ('boolean') {
                         <div class="flex items-center h-10">
