--- a/Aero.Angular/src/styles.css
+++ b/Aero.Angular/src/styles.css
@@ -4,7 +4,7 @@
 
 /* Default theme (light) */
 :root {
-  --color-primary: #8a2fa4;
+  --color-primary: #00899c;
   --color-secondary: #23394d;
   --color-accent: #00899c;
   --color-text: #1e293b;
@@ -12,7 +12,7 @@
 
 /* Dark theme overrides */
 .dark {
-  --color-primary: #5d216f;
+  --color-primary: #007080;
   --color-secondary: #1b2a37;
   --color-accent: #007080;
   --color-text: #ffffff;
