--- a/Aero.Angular/src/app/workers/workers.component.html
+++ b/Aero.Angular/src/app/workers/workers.component.html
@@ -46,7 +46,7 @@
             <h3 class="text-xl font-semibold text-accent mb-4">{{ module.name }}</h3>
             <p class="text-text mb-6">{{ module.description }}</p>
 
-            <form [formGroup]="getFormGroup(worker.name, module.name)" class="space-y-4">
+            <form [formGroup]="getFormGroup(worker.name, module.code)" class="space-y-4">
               @for (arg of module.arguments; track arg.name) {
                 <div class="flex items-start space-x-4">
                   <div class="w-1/3">
@@ -99,7 +99,7 @@
 
               <div class="flex justify-end mt-6">
                 <button
-                  (click)="runModule(worker.name, module.name)"
+                  (click)="runModule(worker.name, module.code)"
                   class="px-6 py-2 bg-primary text-white rounded hover:bg-opacity-90 focus:outline-none">
                   Run
                 </button>
